My First Webpage

--- a/SDSO.html
+++ b/SDSO.html
@@ -45,7 +45,7 @@ img {vertical-align: middle;}
   max-width: 1000px;
   position: relative;
   margin:auto;
-  margin-top:50px;
+  margin-top:120px;
 }
 
 /* Next & previous buttons */
@@ -149,19 +149,19 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
   <img src="EllaWater .jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <div class="text">Glistening Waters</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="RonniFlowers.jpeg" style="width:100%">
-  <div class="text">Caption Two</div>
+  <img src="Mango.jpg" style="width:100%">
+  <div class="text">Mango</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="photo3.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <img src="Sandra Confeti 2 Final Product.jpg" style="width:100%">
+  <div class="text">Colorful Confetti</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
