--- a/test.html
+++ b/test.html
@@ -1,73 +1,8 @@
 <!DOCTYPE html>
 <html>
   
-  <link rel= "stylesheet" href = "1234.css">
+  <link rel= "stylesheet" href = "12345.css">
   
-  <style>
-img {
-    opacity: 0.5;
-    filter: alpha(opacity=50); /* For IE8 and earlier */
-}
-
-img:hover {
-    opacity: 1.0;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
-}
-</style>
-
-<!-- Photo Grid -->
-<div class="w3-row" id="myGrid" style="margin-bottom:128px">
-  <div class="cool">
-    <img id"cat" src="photo1.jpg" style="width:40%">
-    <img src="photo1.jpg" style="width:40%">
-    <img src="photo1.jpg" style="width:40%">
-    <img src="photo1.jpg" style="width:40%">
-    <img src="photo1.jpg" style="width:40%">
-    <img src="photo1.jpg" style="width:40%">
-  </div>
-
-  <div class="cool">
-    <img src="photo2.jpg" style="width:40%">
-    <img src="photo2.jpg" style="width:40%">
-    <img src="photo2.jpg" style="width:40%">
-    <img src="photo2.jpg" style="width:40%">
-    <img src="photo2.jpg" style="width:40%">
-    <img src="photo2.jpg" style="width:40%">
-  </div>
-
-  <div class="cool">
-    <img src="photo3.jpg" style="width:40%">
-    <img src="photo3.jpg" style="width:40%">
-    <img src="photo3.jpg" style="width:40%">
-    <img src="photo3.jpg" style="width:40%">
-    <img src="photo3.jpg" style="width:40%">
-    <img src="photo3.jpg" style="width:40%">
-  </div>
-</div>
-
-<!-- End Page Content -->
-</div>
-
-<script>
-// Toggle grid padding
-function myFunction() {
-    var x = document.getElementById("myGrid");
-    if (x.className === "w3-row") {
-        x.className = "w3-row-padding";
-    } else { 
-        x.className = x.className.replace("w3-row-padding", "w3-row");
-    }
-}
-
-// Open and close sidebar
-function w3_open() {
-    document.getElementById("mySidebar").style.width = "100%";
-    document.getElementById("mySidebar").style.display = "block";
-}
-
-function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-}
-</script>
+ <p>Say hello to a fancy border image!</p>
 
 </html> 
