--- a/designs.html
+++ b/designs.html
@@ -66,7 +66,7 @@ img:hover {
     
        <div>
     <img src="EllaWater .jpg" height= "270"width="400">
-    <img src="Padfoot.jpg" height= "270"width="390">
+    <img src="Padfoot.jpeg" height= "270"width="390">
     <img src="Mango.jpg" height= "270"width="390">
   </div>
 </div>
