--- a/SDSO.html
+++ b/SDSO.html
@@ -25,6 +25,7 @@
                 <li> <a href= "SDSO.html" class = "highlight">Home</a> </li>
                  <li> <a href= "designs.html" >Portfolio</a> </li>
                   <li> <a href= "bio.html">Bio</a> </li>
+                    <li> <a href= "projects.html">Projects</a> </li>
             </ul>
         </nav>
             </div>
