--- a/designs.html
+++ b/designs.html
@@ -24,6 +24,8 @@
                 <li> <a href= "SDSO.html">Home</a> </li>
                  <li> <a href= "designs.html" class = "highlight">Portfolio</a> </li>
                   <li> <a href= "bio.html">Bio</a> </li>
+                  <li> <a href= "projects.html">Projects</a> </li>
+                  
             </ul>
         </nav>
             </div>
